--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     apply plugin: "kotlin-android-extensions"
     implementation 'com.github.KwabenBerko:News-API-Java:1.0.2'
+    implementation "com.github.lisawray.groupie:groupie:2.10.1"
+    implementation "com.github.lisawray.groupie:groupie-databinding:2.10.1"
 }
