--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     implementation 'com.github.KwabenBerko:News-API-Java:1.0.2'
     implementation "com.github.lisawray.groupie:groupie:2.10.1"
     implementation "com.github.lisawray.groupie:groupie-databinding:2.10.1"
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
